# prism

binance/: Cargo.toml
binance/src/: client.rs  data_types.rs  main.rs  mod.rs
binance/src/binance/: binance_adapter.rs  binance_client.rs  mod.rs
core/: Cargo.toml
core/src/: main.rs
core/src/order_book/: data_types.rs  mod.rs  multi_book.rs  order_book.rs
core/src/order_book/clients/: client.rs  mod.rs
core/src/order_book/clients/binance/: binance_adapter.rs  binance_client.rs  data_types.rs
core/src/order_book/clients/bitstamp/: bitstamp_adapter.rs  bitstamp_client.rs  data_types.rs  mod.rs
core/src/order_book/clients/coinbase/: coinbase_adapter.rs  coinbase_client.rs  data_types.rs  mod.rs
core/src/order_book/clients/gemini/: data_types.rs  gemini_adapter.rs  gemini_client.rs  mod.rs
core/src/order_book/clients/kraken/: data_types.rs  kraken_adapter.rs  kraken_client.rs  mod.rs
core/src/ping/: ping.py
infrastructure/: Pipfile  cdktf.json
infrastructure/src/: main.py
infrastructure/src/monitoring/: ping_metrics.py
infrastructure/src/ping/: index.py
infrastructure/src/vpc/: index.py
