[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "*"
futures-channel = "*"
serde = { version = "1.0", features = ["derive"] }
serde-json-core = "0.5.0"
heapless = { version = "*", features = ["serde"] }
chrono = "0.4"
arc-swap = "*"
tracing-bunyan-formatter = { default-features = false, version = "0.2" }